fix overflow classes

--- a/fill.scss
+++ b/fill.scss
@@ -54,9 +54,9 @@
 }
 
 .fillScrollY {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .fillScrollX {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
